--- a/src/app/common/components/modals/SourcesModal.styles.scss
+++ b/src/app/common/components/modals/SourcesModal.styles.scss
@@ -5,17 +5,33 @@
 
 $bookImg: "@assets/images/Books_stretched.png";
 
-.ant-modal-content {
-  padding: 0 !important;
-  @include mut.full-rounded(30px);
-}
+.ant-modal {
+  .ant-modal-content {
+    height: pxToRem(830px);
+    padding: 0 !important;
+    box-shadow: 0 10px 16px 0 rgb(0 0 0 / 20%),
+      0 6px 20px 0 rgb(0 0 0 / 19%);
 
-.ant-modal-close {
-  @include mut.hidden();
+    border-radius: 70px;
+    -webkit-border-radius: 70px;
+  }
+  .ant-modal-close {
+    @include mut.sized(83px, 80px);
+    @include mut.positioned-as(absolute, $left: 93%, $top: -25px);
+    @include mut.circular();
+
+    background-color: c.$pure-white-color;
+
+    &:hover {
+      background-color: #ece9e9 !important;
+    }
+  }
 }
 
 .sourceImgContainer {
+  position: sticky;
   @include mut.sized(100%, 160px);
+
   @include mut.flex-centered();
   @include mut.bg-image($bookImg);
 
@@ -27,7 +43,7 @@ $bookImg: "@assets/images/Books_stretched.png";
 
 .sourcesContentContainer {
   @include mut.flexed($direction: column, $gap: 15px);
-  margin: pxToRem(30px);
+  @include mut.rem-margined(30px, $left: 30px);
 
   h1 {
     @include mut.with-font(ft.$closer-text-font, $font-weight: 500, $font-size: 36px);
@@ -37,6 +53,11 @@ $bookImg: "@assets/images/Books_stretched.png";
 
 .volumeContainer {
   @include mut.flexed($direction: column, $gap: 10px);
+  height: pxToRem(565px);
+  overflow-y: scroll;
+
+  padding-right: pxToRem(10px);
+  margin-right: pxToRem(10px);
 
   p {
     font-weight: 300;
@@ -47,5 +68,20 @@ $bookImg: "@assets/images/Books_stretched.png";
       text-decoration: underline;
       cursor: pointer;
     }
+  }
+
+  &::-webkit-scrollbar-thumb,
+  &::-webkit-scrollbar-track
+  {
+    @include mut.full-rounded(15px);
+  }
+
+  &::-webkit-scrollbar-thumb {
+    background: c.$card-scrollbar-track-color;
+  }
+
+  &::-webkit-scrollbar-track {
+    background: c.$accented-gray-color;
+    @include mut.rem-margined($top: -15px, $bottom: 90px);
   }
 }
