--- a/src/features/RelatedFiguresBlock/RelatedFigureItem/RelatedFigureItem.styles.scss
+++ b/src/features/RelatedFiguresBlock/RelatedFigureItem/RelatedFigureItem.styles.scss
@@ -8,10 +8,10 @@
     height: pxToRem(380px);
 
     box-sizing: border-box;
-    border: 3px solid c.$pure-white-color;
-    border-radius: 30px;
+    border: pxToRem(3px) solid c.$pure-white-color;
+    border-radius: pxToRem(30px);
 
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    box-shadow: 0px pxToRem(4px) pxToRem(4px) rgba(0, 0, 0, 0.25);
 
     position: relative;
     display: flex;
@@ -20,8 +20,8 @@
     cursor: pointer;
 
     .slideText {
-        width: 272px;
-        height: 68px;
+        width: pxToRem(272px);
+        height: pxToRem(68px);
 
         background-color: c.$dark-red-color;
 
@@ -31,24 +31,24 @@
         flex-wrap: wrap;
 
         position: absolute;
-        top: 286px;
+        top: pxToRem(286px);
         z-index: 0;
 
         .heading {
             width: 100%;
-            height: 64px;
+            height: pxToRem(64px);
 
             text-align: left;
             color: c.$pure-white-color;
-            font-size: 24px;
+            font-size: pxToRem(24px);
             font-style: normal;
             font-weight: 500;
-            line-height: 32px;
+            line-height: pxToRem(32px);
 
             display: flex;
             align-items: center;
-            padding-left: 32.06px;
-            padding-right: 15.37px;
+            padding-left: pxToRem(32.06px);
+            padding-right: pxToRem(15.37px);
         }
 
         .tagList{
@@ -57,18 +57,18 @@
 
             display: flex;
             align-items: center;
-            padding-top: 10px;
-            padding-left: 32.06px;
-            padding-right: 15.37px;
-            gap: 5px;
+            padding-top: pxToRem(10px);
+            padding-left: pxToRem(32.06px);
+            padding-right: pxToRem(15.37px);
+            gap: pxToRem(5px);
 
             .tag {
                 width: auto;
-                height: 38px;
-                border-radius: 11px;
-                padding: 9px 12px 9px 12px;
+                height: pxToRem(38px);
+                border-radius: pxToRem(11px);
+                padding: pxToRem(9px) pxToRem(12px) pxToRem(9px) pxToRem(12px);
     
-                border: 2px solid c.$pure-white-color;
+                border: pxToRem(2px) solid c.$pure-white-color;
     
                 display: flex;
                 justify-content: center;
@@ -78,14 +78,14 @@
     
                 p {
                     width: auto;
-                    height: 20px;
+                    height: pxToRem(20px);
     
                     font-family: f.$roboto-font;
                     font-style: normal;
                     text-align: center;
                     color: c.$pure-white-color;
                     font-weight: 500;
-                    font-size: 15px;
+                    font-size: pxToRem(15px);
                     line-height: 135.69%;
                 }
             }
