Added base header layout.

--- a/src/assets/sass/variables/_variables.colors.scss
+++ b/src/assets/sass/variables/_variables.colors.scss
@@ -10,8 +10,8 @@ $dark-gray-color: #4D4D4D;
 $normal-gray-color: #7F7F7F;
 $normal-darker-gray-color: #7E7E7E;
 
-$dark-red-color: #8D1F16;
-$accented-red-color: #DB3424;
+$dark-red-color: #8D1F16 !important;
+$accented-red-color: #DB3424 !important;
 
 $slider-base-dot-color: #D9D9D9;
 $timeline-reel-color: #D9D9D9;
