--- a/src/app/layout/app/App.styles.scss
+++ b/src/app/layout/app/App.styles.scss
@@ -28,7 +28,7 @@ div {
 */
 
 ::-webkit-scrollbar {
-  width: .625rem;
+  width: .765rem;
 }
 
 ::-webkit-scrollbar-track {
@@ -36,5 +36,6 @@ div {
 }
 
 ::-webkit-scrollbar-thumb {
-  background:  c.$scrollbar-thumb-color;
+  @include mut.full-rounded(4px);
+  background: c.$scrollbar-thumb-color;
 }
