--- a/src/features/RelatedFiguresBlock/RelatedFigureItem/RelatedFigureItem.styles.scss
+++ b/src/features/RelatedFiguresBlock/RelatedFigureItem/RelatedFigureItem.styles.scss
@@ -7,7 +7,7 @@
     @include mut.sized($width: 278px, $height: 380px);
 
     box-sizing: border-box;
-    border: pxToRem(3px) solid c.$pure-white-color;
+    border: 3px solid c.$pure-white-color;
     @include mut.full-rounded($rad: 30px);
 
     box-shadow: 0px pxToRem(4px) pxToRem(4px) rgba(0, 0, 0, 0.25);
@@ -59,7 +59,7 @@
         @include mut.full-rounded($rad: 11px);
         @include mut.rem-padded($left: 12px, $top: 9px, $right: 12px, $bottom: 9px);
 
-        border: pxToRem(2px) solid c.$pure-white-color;
+        border: 2px solid c.$pure-white-color;
 
         @include mut.flex-centered();
 
