--- a/src/features/RelatedFiguresBlock/RelatedFigures.styles.scss
+++ b/src/features/RelatedFiguresBlock/RelatedFigures.styles.scss
@@ -6,7 +6,7 @@
 .relatedFiguresWrapper {
     @include wr.main-page-block-wrapper();
 
-    @include mut.rem-margined($bottom: 110px);
+    @include mut.rem-margined($bottom: 110px, $top: 110px);
 }
 
 .relatedFiguresContainer {
