--- a/src/features/HeaderBlock/HeaderBlock.styles.scss
+++ b/src/features/HeaderBlock/HeaderBlock.styles.scss
@@ -48,6 +48,11 @@
       line-height: f.pxToRem(24px);
     }
   }
+  @media screen and (max-width: 1850px) {
+    .ant-input-affix-wrapper{
+      @include mut.sized(815px, 39px);
+    }
+  }
 }
 
 .leftPartContainer,
